Emacs - Update vterm config
- Don't create new buffers with T if can't find prompt (can manually create new
  terms if needed; more often than not this has been an annoyance)
- vterm-toggle now requires customizing term-prompt-regexp and uses C-a C-k to
  clear text from line (nice improvement)
- Fix noct-vterm-select-or-create

--- a/emacs/.emacs.d/awaken.org
+++ b/emacs/.emacs.d/awaken.org
@@ -6192,6 +6192,11 @@ Show entire path for a directory (or chain of directories) that only contains a 
 **** TODO Dired Narrow
 ** Vterm
 #+begin_src emacs-lisp
+(defun noct-vterm-setup ()
+  "Setup for vterm."
+  (gsetq-local term-prompt-regexp "» ")
+  (toggle-truncate-lines 1))
+
 (use-package vterm
   ;; :general
   ;; ('normal 'override "T" #'vterm)
@@ -6200,6 +6205,7 @@ Show entire path for a directory (or chain of directories) that only contains a 
   (defvar vterm-install t)
   :gfhook
   (nil (noct:disable-global-mode whitespace-mode))
+  (nil #'noct-vterm-setup)
   :config
   (gsetq vterm-shell "zsh"
          ;; increase scrollback
@@ -6209,19 +6215,13 @@ Show entire path for a directory (or chain of directories) that only contains a 
     "<prior>" nil
     "<next>" nil))
 
-(defun noct-vterm-toggle-cd-create ()
-  "Run `vterm-toggle-cd' with `vterm-toggle-cd-auto-create-buffer' true."
-  (interactive)
-  (let ((vterm-toggle-cd-auto-create-buffer t))
-    (call-interactively #'vterm-toggle-cd)))
-
 (use-package vterm-toggle
   :straight (vterm-toggle
              :type git
              :host github
              :repo "jixiuf/vterm-toggle")
   :general
-  ('normal 'override "T" #'noct-vterm-toggle-cd-create)
+  ('normal 'override "T" #'vterm-toggle-cd)
   :init
   (noct:handle-popup vterm-mode)
   :config
@@ -6247,19 +6247,19 @@ Show entire path for a directory (or chain of directories) that only contains a 
   ;;              session number)))
 
   (defun noct-vterm-select-or-create (&optional number)
-    "Switch to a vterm buffer, cerating it if it does not exist.
+    "Switch to a vterm buffer, creating it if it does not exist.
 NUMBER specifies which vterm buffer to switch to. If nil, switch to the
   \"vterm\" buffer."
     (let ((name (if number
                     (format "vterm<%s>" number)
                   "vterm")))
       (switch-to-buffer name)
-      ;; TODO
-      ;; (unless (eq major-mode 'vterm-mode)
-      ;;   (vterm name))
-      ))
+      (unless (eq major-mode 'vterm-mode)
+        (vterm-mode))))
 
   (general-def 'normal vterm-mode-map
+    "mm" #'vterm
+    "mc" #'vterm-toggle-insert-cd
     "ma" (general-l (noct-vterm-select-or-create))
     "mr" (general-l (noct-vterm-select-or-create 2))
     "ms" (general-l (noct-vterm-select-or-create 3))
@@ -6269,11 +6269,7 @@ NUMBER specifies which vterm buffer to switch to. If nil, switch to the
     "mn" (general-l (noct-vterm-select-or-create 7))
     "me" (general-l (noct-vterm-select-or-create 8))
     "mi" (general-l (noct-vterm-select-or-create 9))
-    "mo" (general-l (noct-vterm-select-or-create 10)))
-
-  (defun noct-vterm-setup ()
-    (toggle-truncate-lines 1))
-  (general-add-hook 'vterm-mode-hook #'noct-vterm-setup))
+    "mo" (general-l (noct-vterm-select-or-create 10))))
 #+end_src
 
 * Blog
